umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_formyl-chloride.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "C#h#v3"
      - "O#n2#v2"
      - "Cl#n3#v"
    bonds:
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "C#h#v3"
      - "O#n2#v2"
      - "Cl#n3#v"
    bonds:
      - "="
      - "-"
