umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_gamma-butyrolactone.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EwAW
    atoms:
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EwAW
    atoms:
      - "{Cv4}"
      - "{O/2v2}"
      - "{O/2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
