umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_glyceraldehyde.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: EoEG
    atoms:
      - "{CH2v2}"
      - "{OH/2v1}"
      - "{CHv3}"
      - "{OH/2v1}"
      - "{CHv3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: EoEG
    atoms:
      - "{CH2v2}"
      - "{OH/2v1}"
      - "{CHv3}"
      - "{OH/2v1}"
      - "{CHv3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
