umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_glycolaldehyde.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "O#h#n2#v" "2" "C#h#v3" "3" "O#n2#v2"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["2" "3" "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "O#h#n2#v" "2" "C#h#v3" "3" "O#n2#v2"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["2" "3" "2"]] :charge 0 :spin "#u0 #s1"}}}
